--- a/index.html
+++ b/index.html
@@ -3,58 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>快進盒</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-  <button id="startRecord">開始錄音</button>
-  <button id="stopRecord" disabled>停止錄音</button>
-  <button id="replayRecord" disabled>重播錄音</button>
-  <div id="recordingIndicator" style="display: none;">錄音中...</div>
+  <div class="mx-3 my-3">
+    <button id="startRecord" class=" btn btn-primary">開始錄音</button>
+    <button id="stopRecord" class=" btn btn-primary" disabled>停止錄音</button>
+    <button id="replayRecord" class=" btn btn-primary" disabled>重播錄音</button>
+    <div id="recordingIndicator" style="display: none;">錄音中...</div>
+  </div>
+  <div class="mx-3 my-3">
+    <label>快進</label>
+    <input type="range" id="playbackSpeed" min="3" max="5" step="0.5" value="1" disabled>
+    <span id="speedValue">3</span>倍
+  </div>
 
-  <script>
-    let audioChunks;
-    let mediaRecorder;
-    let lastRecordedBlob;
-
-    // 獲取麥克風許可權並開始錄音
-    document.getElementById('startRecord').addEventListener('click', async () => {
-      const startButton = document.getElementById('startRecord');
-      startButton.disabled = true;
-
-      const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-      mediaRecorder = new MediaRecorder(stream);
-      audioChunks = [];
-      document.getElementById('recordingIndicator').style.display = 'block';
-
-      mediaRecorder.ondataavailable = e => {
-        audioChunks.push(e.data);
-      };
-
-      mediaRecorder.start();
-      document.getElementById('stopRecord').disabled = false;
-    });
-
-    // 停止錄音
-    document.getElementById('stopRecord').addEventListener('click', () => {
-      mediaRecorder.stop();
-      mediaRecorder.onstop = () => {
-        lastRecordedBlob = new Blob(audioChunks, { 'type': 'audio/wav' });
-        const audio = new Audio(URL.createObjectURL(lastRecordedBlob));
-        audio.playbackRate = 3.5; // 設置播放速度為三倍
-        audio.play();
-        document.getElementById('recordingIndicator').style.display = 'none';
-        document.getElementById('replayRecord').disabled = false;
-        document.getElementById('startRecord').disabled = false;
-      };
-      document.getElementById('stopRecord').disabled = true;
-    });
-
-    // 重播錄音
-    document.getElementById('replayRecord').addEventListener('click', () => {
-      if (lastRecordedBlob) {
-        const audio = new Audio(URL.createObjectURL(lastRecordedBlob));
-        audio.playbackRate = 3.5;
-        audio.play();
-      }
-    });
-  </script>
+  <script src="record.js"></script>
 </body>
