--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <button id="replayRecord" class=" btn btn-primary" disabled>重播錄音</button>
     <div id="recordingIndicator" style="display: none;">錄音中...</div>
   </div>
-  <div class="mx-3 my-3">
+  <!-- <div class="mx-3 my-3">
     <label>快進</label>
     <input type="range" id="playbackSpeed" min="3" max="5" step="0.5" value="1" disabled>
     <span id="speedValue">3</span>倍
-  </div>
+  </div> -->
 
   <script src="record.js"></script>
 </body>
