--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <title>快進盒</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="mx-3 my-3">
+  <div class="container">
     <button id="startRecord" class=" btn btn-primary">開始錄音</button>
     <button id="stopRecord" class=" btn btn-primary" disabled>停止錄音</button>
     <button id="replayRecord" class=" btn btn-primary" disabled>重播錄音</button>
