--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <button id="startRecord" class=" btn btn-primary">開始錄音</button>
     <button id="stopRecord" class=" btn btn-primary" disabled>停止錄音</button>
     <button id="replayRecord" class=" btn btn-primary" disabled>重播錄音</button>
-    <div id="recordingIndicator" style="display: none;">錄音中...</div>
+    <div class="record-center">
+        <h3 id="recordingIndicator">● 錄音中...</h3>
+    </div>
   </div>
   <!-- <div class="mx-3 my-3">
     <label>快進</label>
